Fix layout problems in css

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -14,8 +14,6 @@ body {
 header {
   color: white;
   background-color: #d9145c;
-  /*font-size: 2em;*/
-
   width: 100%;
   height: 60px;
 }
@@ -85,7 +83,7 @@ nav a:hover {
 
 .card textarea {
   font-family: 'Gloria Hallelujah', cursive;
-
+  font-size: 1.6em;
   width: 99%;
   height: 280px;
   display: block;
@@ -102,9 +100,12 @@ nav a:hover {
   margin: 0;
   padding: 0;
   width: 50%;
+  height: 50%;
   float: left;
   opacity: 0.7;
 }
+
+
 
 .card .icon_img:hover{
   opacity: 1;
@@ -114,14 +115,24 @@ nav a:hover {
 
 .card .joke_big_image {
   width: 100%;
-  height: 100%;
+  height: 50%;
   display: none;
+}
+.card .joke_big_image .icon_img{
+  width: 100%;
+  height: 100%;
+  opacity: 1;
 }
 
 .title {
   font-family: 'Gloria Hallelujah', cursive;
   padding: 10px;
   margin: 10px;
+  text-align: center;
+}
+
+#save_btn {
+  float: right;
 }
 
 
